force-app/main/default/objects/Application_Budget_Detail__c/Application_Budget_Detail__c.object-meta.xml
<CustomObject>
    <label>Application Budget Detail</label>
    <nameField>
        <label>Application Budget Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Budget Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>