force-app/main/default/objects/Application_Budget_Detail__c/fields/Application_Budget__c.field-meta.xml
<CustomField>
    <fullName>Application_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Budget</label>
    <referenceTo>Application_Budget__c</referenceTo>
    <relationshipLabel>Application Budget Details</relationshipLabel>
    <relationshipName>Application_Budget_Details</relationshipName>
    <type>Lookup</type>
</CustomField>