force-app/main/default/objects/Application_Budget_Detail__c/fields/Application_Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Application_Budget_Category__c</fullName>
    <label>Application Budget Category</label>
    <referenceTo>Application_Budget_Category__c</referenceTo>
    <relationshipLabel>Application Budget Details</relationshipLabel>
    <relationshipName>Application_Budget_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>