force-app/main/default/objects/Application_Budget_Detail__c/fields/Other_Funding__c.field-meta.xml
<CustomField>
    <fullName>Other_Funding__c</fullName>
    <label>Other Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>