force-app/main/default/objects/Application_Budget_Detail__c/fields/Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Amount__c</fullName>
    <label>Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>